# ig-follower-analyzer

./: .env.template  .gitignore  README.md  pyproject.toml
src/ig_follower_analyzer/: __init__.py  cli.py  models.py  reporting.py  scraping.py  selection_parser.py  selectors.py  set_ops.py  unfollow.py
src/ig_follower_analyzer/auth/: __init__.py  session.py
tests/: test_auth_credentials.py  test_behavioral_flows.py  test_reporting.py  test_selection_parser.py  test_set_ops.py
